# pydatatypes

./: README.md  setup.cfg  setup.py
pydatatypes/: __init__.py  abc.py  dataclass.py  json.py  test.py  typing.py
tests/: conftest.py  test_dataclass.py
tests/typing/: conftest.py  test_basic.py  test_convert_basic.py  test_union.py
