[metadata]
name = pydatatypes
description = Package for working with pseudo-statically-typed data structures
version = attr: pydatatypes.__version__
author = Jared Lumpe
author_email = mjlumpe@gmail.com


[options]
packages = find:

python_requires = >= 3.5

install_requires =
    attrs>=19

tests_require =
    pytest
    numpy


[aliases]
test = pytest


[tool:pytest]

# Run tests in tests/, obviously
# Also check docstrings in package
testpaths = tests pydatatypes

# Run doctests on all modules
addopts = --doctest-modules
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL
